src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedBundleClassType_2/InvalidUnexpectedBundleClassType_2.php
<?php

namespace Invalid\UnexpectedBundleClassType_2;

/*
 * The class doesn't extend ClarolinePlugin
 */
class InvalidUnexpectedBundleClassType_2 extends \DOMDocument
{

}